2005-02-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgeMatrix.R: define group methods "Arith", "Math", "Math2"
        * NAMESPACE: export them (and import generics from "methods")
	* tests/group-methods.R : and test them.

	* src/dtrMatrix.c (dtrMatrix_as_dgeMatrix): prevent seg.fault in
	border case

2005-02-24  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): 0.95-2  released to CRAN

	* src/dgBCMatrix.c:
	* src/lmer.c: many changes
	* ...

2005-02-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R: add more sophisticated show() method.

2005-02-02  Douglas Bates  <bates@stat.wisc.edu>

	* */* : almost complete reorganization of classes.

2005-01-26  Douglas Bates  <bates@bates7>

	* R/AllGeneric.R: Added matrix exponential generic expm and a method
	for the geMatrix class.

2005-01-24  Douglas Bates  <bates@bates7>

	* src/Makefile (clean): Remove *.a and *.so

	* man/cscBlocked-class.Rd: Remove reference to the lmer-class.

2005-01-23  Douglas Bates  <bates@bates7>

	* src/lmer.c (Lind): Definition of Lind was backwards.  This only
	had an effect in cases with more than 2 grouping factors.

2005-01-03  Douglas Bates  <bates@bates1-home>

	* src/lmeRep.c (lmer_variances): change from lmeRep to lmer

2004-12-23  Douglas Bates  <bates@bates1-home>

	* src/init.c (R_init_Matrix): Reorder calls to R_registerRoutines
	and R_useDynamicSymbols (suggested by B.D.Ripley).

2004-12-14  Douglas Bates  <bates@bates1-home>

	* R/sscMatrix.R: Add determinant methods

	* src/triplet.[ch],src/init.c (triplet_to_matrix): Add a coercion
	for tripletMatrix to matrix.

2004-12-13  Douglas Bates  <bates@bates1-home>

	* R/AllClass.R (.onLoad): Eliminate the bbCrosstab class, which is
	no longer used.

	* src/R_ldl.c: Created an R-specific version of the ldl.[ch] files
	with dynamic allocation of scratch arrays.

	* src/ssclme.c (ssclme_copy_ctab): Fixed bug in creation of ZtZ
	for multivariate random effects with multiple grouping factors.